feat(spring-poi): Excel SAX 벤치마크(JMH) 추가
- JMH 기반 SAX/DOM 엑셀 파싱 벤치마크 케이스 추가
- SpringBoot context 직접 올려 서비스/빈 환경에서 통합 벤치 가능하게 개선
- sample-1.xlsx 사용, 사용자 인증 context 세팅 포함