@@ -1,5 +1,6 @@
 package com.gmoon.springpoi.benchmark;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -9,12 +10,15 @@ import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
 import org.openjdk.jmh.annotations.Level;
+import org.openjdk.jmh.annotations.Measurement;
 import org.openjdk.jmh.annotations.Mode;
 import org.openjdk.jmh.annotations.OutputTimeUnit;
 import org.openjdk.jmh.annotations.Param;
 import org.openjdk.jmh.annotations.Scope;
 import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.State;
+import org.openjdk.jmh.annotations.TearDown;
+import org.openjdk.jmh.annotations.Warmup;
 import org.springframework.boot.SpringApplication;
 import org.springframework.context.ApplicationContext;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -27,24 +31,49 @@ import com.gmoon.springpoi.users.domain.Role;
 import com.gmoon.springpoi.users.domain.User;
 import com.gmoon.springpoi.users.model.ExcelUserVO;
 
-@BenchmarkMode(Mode.All)
+/**
+ * <ul>
+ *   <li>@BenchmarkMode: 측정 모드는 여러 개 지정 가능. {@link Mode#All} 사용 시 모든 모드를 측정</li>
+ *   <li>@Warmup: 워밍업 반복 횟수</li>
+ *   <li>@Measurement: 측정 반복 횟수</li>
+ *   <li>@Fork: 독립 JVM 실행 횟수(1이면 한 번만 실행)</li>
+ *   <li>@Param: 파라미터별 벤치마크 실행 (예: 파일 크기, 로우 수 등 가변 조건 테스트)</li>
+ * </ul>
+ *
+ * @see <a href="https://github.com/openjdk/jmh">github -openjdk jmh</a>
+ * @see <a href="https://www.baeldung.com/java-microbenchmark-harness">baeldung -jmh</a>
+ * @see <a href="https://medium.com/@python-javascript-php-html-css/managing-memory-accumulation-in-jmh-benchmarks-effectively-a6615a8f1007">Managing Memory Accumulation in JMH Benchmarks Effectively</a>
+ */
+@BenchmarkMode({Mode.Throughput, Mode.AverageTime})
+@Warmup(iterations = 3, time = 2)
+@Measurement(iterations = 5, time = 2)
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @State(Scope.Benchmark)
-@Fork(1)
+@Fork(
+	 value = 1,
+	 warmups = 1,
+	 jvmArgs = {
+		  "-Xmx1024m",
+		  "-XX:+HeapDumpOnOutOfMemoryError",
+		  "-XX:HeapDumpPath=./heapdump.hprof",
+		  "-XX:+PrintGCDetails",
+		  "-XX:+PrintGCTimeStamps"
+	 }
+)
 public class ExcelSAXBenchmark {
-
-	private static final String BASE_DIR = "src/main/resources/sample/";
-
 	private ApplicationContext ctx;
 
 	// @Param({"1", "100"})
 	@Param({"1"})
-	public int planCacheSize;
+	public int excelDataRowSize;
 
 	@Setup(Level.Trial)
 	public void setup() {
 		if (ctx == null) {
-			ctx = SpringApplication.run(SpringPoiApplication.class, "--server.port=9000");
+			ctx = SpringApplication.run(
+				 SpringPoiApplication.class,
+				 "--server.port=9000"
+			);
 		}
 
 		SecurityContext context = SecurityContextHolder.getContext();
@@ -52,25 +81,41 @@ public class ExcelSAXBenchmark {
 		context.setAuthentication(new UsernamePasswordAuthenticationToken(user, null, user.getAuthorities()));
 	}
 
+	@TearDown(Level.Trial)
+	public void tearDown() {
+		if (ctx != null) {
+			SpringApplication.exit(ctx);
+			ctx = null;
+		}
+	}
+
 	@Benchmark
 	public void readSax() throws IOException {
-		String filename = String.format("sample-%d.xlsx", planCacheSize);
 		ExcelUtil.readSAX(
-			 Files.newInputStream(Paths.get(BASE_DIR, filename)),
+			 Files.newInputStream(Paths.get(getFilePath())),
 			 ctx,
-			 ExcelUserVO.class
+			 ExcelUserVO.class,
+			 list -> {/* noop */}
 		);
 	}
 
 	@Benchmark
 	public void readDom() {
-		String filename = String.format("sample-%d.xlsx", planCacheSize);
-		String filePath = BASE_DIR + filename;
-
 		ExcelUtil.read(
 			 ctx,
-			 filePath,
+			 getFilePath(),
 			 ExcelUserVO.class
 		);
+	}
+
+	private String getFilePath() {
+		String filepath = String.format("%s/%s/%s",
+			 System.getProperty("user.dir"),
+			 "src/test/resources/sample/userimport",
+			 String.format("user-sample-%d.xlsx", excelDataRowSize)
+		);
+
+		return new File(filepath)
+			 .getAbsolutePath();
 	}
 }
